# door-entry-system

./: .gitignore  .gitmodules  door-entry-system.code-workspace
archived/ch32-firmware/: Cargo.toml  README.md
archived/ch32-firmware/.cargo/: config.toml
archived/ch32-firmware/src/: main.rs
archived/ch32-firmware/src/utils/: button.rs  rfid.rs  ws2812.rs
archived/esp32-firmware/: .gitignore  README.md  flash-fat.sh  ota.sh  partitions.csv
archived/esp32-firmware/ffi/: ctest.c
archived/rpi-firmware/.cargo/: config.toml
archived/rpi-firmware/src/services/: common.rs  door_service.rs  serial_service.rs
bluetooth-web-app/: .env.sample  .gitignore  bundle.ts  deno.json  flake.nix  server.ts
bluetooth-web-app/src/: app.tsx
bluetooth-web-app/web/: index.html  service-worker.js
bluetooth-web-app/web/css/: app.css
ch32-firmware/src/: utils.rs
ch32-firmware/src/utils/: common.rs
esp32-firmware/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  flash-fat.sh  flash.sh  ota.sh  partitions.csv
esp32-firmware/.cargo/: config.toml
esp32-firmware/fat/: codes.txt  config.txt  name.txt
esp32-firmware/ffi/: ctest.c
esp32-firmware/partitions-macro/: Cargo.toml
esp32-firmware/partitions-macro/src/: lib.rs
management-system/: .env.example  .gitignore  README.md  deno.json  flake.nix  send-code.sh
management-system/.zed/: settings.json
management-system/backend/: .gitignore  deno.json  drizzle.config.ts
management-system/backend/src/: index.ts
management-system/backend/src/config/: index.ts
management-system/backend/src/db/: index.ts  schema.ts  utils.ts
management-system/backend/src/model/: common.ts  index.ts  model.ts  tag.ts  task-log.ts  user.ts
management-system/backend/src/routers/: activity-log.ts  auth.ts  common.ts  device.ts  events.ts  index.ts  mfa-helper.ts  model.ts  stats.ts  tag.ts  task-log.ts  task.ts  trpc.ts  user.ts
management-system/backend/src/services/: authentik.ts  bootstrap.ts  code.ts  common.ts  device.ts  go-cardless.ts  home-assistant.ts  index.ts
management-system/backend/src/services/device/: collection.ts  common.ts  connection.ts  index.ts
management-system/backend/src/services/device.ws/: collection.ts  common.ts  connection.ts  index.ts
management-system/backend/src/tasks/: check-payments.ts  common.ts  index.ts  push-tag-codes.ts  sync-authentik.ts  sync-gocardless.ts
management-system/common/: deno.json
management-system/common/src/: activity-log.ts  common.ts  device.ts  index.ts  payment.ts  tag.ts  task-log.ts  user.ts  utils.ts
management-system/common/src/utils/: date.ts  general.ts  index.ts  types.ts
management-system/frontend/: bundle.ts  deno.json  server.ts
management-system/frontend/sass/: bootstrap.scss
management-system/frontend/src/: app.tsx  index.scss
management-system/frontend/src/components/: helper.ts  index.scss  index.ts
management-system/frontend/src/components/Button/: index.tsx
management-system/frontend/src/components/Card/: index.scss  index.tsx
management-system/frontend/src/components/DataList/: index.scss  index.tsx
management-system/frontend/src/components/DataTable/: index.tsx
management-system/frontend/src/components/DateInfo/: index.tsx
management-system/frontend/src/components/FormFields/: index.tsx
management-system/frontend/src/components/LinkButton/: index.tsx
management-system/frontend/src/components/LookupInput/: index.tsx
management-system/frontend/src/components/MagicBrowser/: index.scss  index.tsx
management-system/frontend/src/components/MagicFields/: index.tsx
management-system/frontend/src/components/NavBar/: index.tsx
management-system/frontend/src/components/Pagination/: index.tsx
management-system/frontend/src/components/SearchBar/: index.tsx
management-system/frontend/src/components/Select/: index.tsx
management-system/frontend/src/components/TextInput/: index.tsx
management-system/frontend/src/components/Tile/: index.tsx
management-system/frontend/src/components/Toast/: index.tsx
management-system/frontend/src/components/ToastContainer/: index.tsx
management-system/frontend/src/dialogs/: common.tsx  index.tsx
management-system/frontend/src/dialogs/AlertDialog/: index.tsx
management-system/frontend/src/dialogs/BrowserDialog/: index.tsx
management-system/frontend/src/dialogs/BrowserPickDialog/: index.tsx
management-system/frontend/src/dialogs/ConfirmDialog/: index.tsx
management-system/frontend/src/dialogs/OptionDialog/: index.tsx
management-system/frontend/src/dialogs/SelectOptionDialog/: index.tsx
management-system/frontend/src/helper/: index.ts
management-system/frontend/src/lib/: common.ts  index.ts  session.ts  toast.ts  trpc.ts  types.ts
management-system/frontend/src/routes/: auth-return.tsx  index.tsx  login.tsx  mfa.tsx
management-system/frontend/src/routes/activity-log/: index.tsx
management-system/frontend/src/routes/devices/: edit.tsx  index.tsx
management-system/frontend/src/routes/tags/: edit.tsx  index.tsx  new.tsx
management-system/frontend/src/services/: index.ts  session.ts  toast.ts  trpc.ts  types.ts
management-system/frontend/src/utils/: index.ts
management-system/frontend/web/: index.html  service-worker.js
management-system/frontend/web/css/: app.css  bootstrap.css  bootstrap.css.map
pico-firmware/: .env.sample  .gitignore  .gitmodules  Cargo.toml  README.md  attach.sh  memory.x  run-wifi.sh  run-wired.sh  rust-toolchain.toml
pico-firmware/.cargo/: config.toml
pico-firmware/scripts/: encode-mp3.sh
pico-firmware/src/: main.rs
pico-firmware/src/services/: audio.rs  auth.rs  common.rs  mod.rs  state.rs
pico-firmware/src/tasks/: audio.rs  button.rs  common.rs  door.rs  ethernet.rs  file.rs  mod.rs  rfid.rs  websocket.rs  wifi.rs  ws2812.rs  ws2812_asm.rs
pico-firmware/src/utils/: common.rs  decoder.rs  flash_stream.rs  local_fs.rs  mod.rs  mp3dec.rs
rpi-firmware/: .gitignore  Cargo.toml  Cross.toml
rpi-firmware/src/: main.rs
rpi-firmware/src/services/: mod.rs  tag_service.rs  web_socket_service.rs
(+4 files in other folders)
