[package]
name = "door-entry-system"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23.1", features = ["esp32"] }
esp-println = { version = "0.12.0", features = ["esp32", "log"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.6.0" }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embassy-net = { version = "0.6.0", features = [
    "tcp",
    "udp",
    "dhcpv4",
    "medium-ethernet",
    "dhcpv4-hostname",
] }
esp-wifi = { version = "0.12.0", default-features = false, features = [
    "esp32",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
    "ble",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32"] }
static_cell = { version = "2.1.0", features = ["nightly"] }
critical-section = "1.2.0"
picoserve = { version = "0.14.1", features = ["embassy"] }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
embedded-storage = "0.3.1"
esp-storage = { version = "0.4.0", features = ["esp32"] }
crc = "3.2.1"
reqwless = { version = "0.13.0", features = ["alloc"] }
embedded-nal-async = "0.8.0"
partitions-macro = { path = "./partitions-macro" }
fatfs = { version = "0.4.0", default-features = false, features = [
    "alloc",
], git = "https://github.com/rafalh/rust-fatfs" }
mfrc522 = "0.8.0"
embedded-hal-bus = "0.2.0"
embassy-sync = "0.6.1"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
    "macros",
    "async",
] }
serde-json-core = "0.6.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release.package.esp-storage]
opt-level = 3

[build-dependencies.cc]
version = "1.0"
