[package]
edition = "2021"
name    = "door-entry-firmware"
version = "0.1.0"

[[bin]]
name = "door-entry-firmware"
path = "./src/bin/async_main.rs"

[dependencies]
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dhcpv4-hostname",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-alloc" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-backtrace", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-hal", features = ["esp32c6", "unstable"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-println", features = ["esp32c6", "log"] }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-wifi", default-features = false, features = [
  "esp-alloc",
  "esp32c6",
  "log",
  "utils",
  "wifi",
  "ble",
  "coex"
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-time     = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy  = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-hal-embassy", features = ["esp32c6"] }
static_cell      = { version = "2.1.0", features = ["nightly"] }
embassy-sync = "0.6.2"
picoserve = { version = "0.14.1", features = ["embassy"] }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
embedded-storage = "0.3.1"
esp-storage = { version = "0.4.0", features = ["esp32c6"] }
crc = "3.2.1"
reqwless = { version = "0.13.0", features = ["alloc"] }
embedded-nal-async = "0.8.0"
partitions-macro = { path = "./partitions-macro" }
fatfs = { version = "0.4.0", default-features = false, features = [
    "alloc",
], git = "https://github.com/rafalh/rust-fatfs" }
mfrc522 = "0.8.0"
embedded-hal-bus = "0.2.0"
serde-json-core = "0.6.0"
ws2812-async = { git = "https://github.com/kalkyl/ws2812-async.git" }
smart-leds = "0.4.0"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
    "macros",
    "async",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release.package.esp-storage]
opt-level = 3
