[package]
edition = "2021"
name = "door-entry-firmware"
version = "0.2.1"

[[bin]]
name = "door-entry-firmware"
path = "./src/bin/async_main.rs"

[dependencies]
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "macros",
  "async",
] }
crc = "3.2.1"
# for more networking protocol support see https://crates.io/crates/edge-net
critical-section = "1.2.0"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = ["nightly"] }
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dhcpv4-hostname",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-hal-bus = "0.2.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8.0"
embedded-storage = "0.3.1"
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-alloc" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-backtrace", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-hal", features = [
  "esp32c6",
  "unstable",
] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-hal-embassy", features = [
  "esp32c6",
] }
esp-hal-mfrc522 = { version = "0.2.1", features = ["embassy-time"] }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-println", features = [
  "esp32c6",
  "log",
] }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-storage", features = [
  "esp32c6",
] }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", package = "esp-wifi", default-features = false, features = [
  "esp-alloc",
  "esp32c6",
  "log",
  "utils",
  "wifi",
  "ble",
  "coex",
] }
fatfs = { version = "0.4.0", default-features = false, features = [
  "alloc",
], git = "https://github.com/rafalh/rust-fatfs" }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
mfrc522 = "0.8.0"
partitions-macro = { path = "./partitions-macro" }
picoserve = { version = "0.14.1", features = ["embassy"] }
reqwless = { version = "0.13.0", features = ["alloc"] }
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.0", features = ["nightly"] }
ws2812-async = { git = "https://github.com/kalkyl/ws2812-async.git" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release.package.esp-storage]
opt-level = 3
