[package]
edition = "2024"
name = "pico-firmware"
version = "0.1.0"
authors = ["Chris Dell <cjdell@gmail.com>"]
resolver = "2"

[[bin]]
name = "pico-firmware"
path = "src/bin/main.rs"
test = false
bench = false

[features]
wifi = []
wired = []

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
rand_core = "0.6.4"
heapless = "0.8.0"
smoltcp = { version = "0.12.0", default-features = false }
serde_json = { version = "1.0.143", default-features = false, features = [
    "alloc",
] }
serde = { version = "1.0.219", default-features = false, features = [
    "derive",
    "alloc",
] }
serde-json-core = "0.6.0"
esp-hal-mfrc522 = "0.3.0"
fatfs = { version = "0.4.0", default-features = false, features = [
    "alloc",
], git = "https://github.com/rafalh/rust-fatfs" }
anyhow = { version = "1.0.99", default-features = false }
embedded-alloc = { version = "*" }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
critical-section = { version = "*" }
smart-leds = "0.4.0"
libm = "0.2.15"

edge-http = { version = "*" }
edge-nal = { version = "*" }
edge-ws = { version = "*" }
edge-nal-embassy = { version = "*" }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }

cortex-m-rt = "*"
cortex-m = { version = "*", features = ["critical-section-single-core"] }

reqwless = { version = "0.14.0", default-features = false }
cyw43 = { version = "0.7.0", features = ["defmt"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = [
    "defmt",
    "rp235xa",
    "time-driver",
] }
embassy-net = { version = "0.8.0", features = [
    "defmt",
    "icmp",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
] }
embassy-executor = { version = "0.10.0", features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-embedded-hal = "0.6.0"
embassy-futures = "0.1.2"
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
# lto = true
# opt-level = "z"
